fix: dark mode not work after page refresh

--- a/packages/cli/doc-core/src/theme-default/components/Siderbar/index.module.scss
+++ b/packages/cli/doc-core/src/theme-default/components/Siderbar/index.module.scss
@@ -59,7 +59,7 @@
 
 .menuItem:hover,
 .collapseContainer:hover {
-  background-color: rgba(229, 229, 229, 0.4);
+  background-color: var(--modern-c-black-mute);
   transition: all 0.2s;
 }
 
